crates/icarus-derive/tests/ui/fail/icarus_tool_with_references.stderr
error: Tool function validation failed:
         - Tool functions must have either #[query] or #[update] attribute
         - Tool parameters cannot contain references. Use owned types instead.
 --> tests/ui/fail/icarus_tool_with_references.rs:4:4
  |
4 | fn bad_tool(data: &str) -> Result<String, String> {
  |    ^^^^^^^^
